# mema

./: .envrc  .gitignore  CMakeLists.txt  README  data.go  envrc  envrc.in  exec.go  functree.go  graf.go  lz4.go  main.go  mema_rtl.cpp  mempatviz.go  pre-commit  stack.go  text.go  util.go
LLVMMema/: Pass.cpp
examples/: .gitignore  Makefile
examples/astar/: astar.cpp
examples/bubble/: bubble.cpp
examples/matrixmul/: matrixmul.cpp
examples/stdsort/: stdsort.cpp
memagrind/: quickstart.sh  valgrind.patch
memagrind/memadump/: Makefile.am  lz4.c  md_main.c
memapass/: CMakeLists.txt  envrc  envrc.in  mema_malloc.cpp  mema_rtl.cpp
memapass/LLVMMema/: CMakeLists.txt  Pass.cpp
memaviz/: .envrc  .gitignore  block.go  context.go  data.go  demangle.go  demangle_not_available.go  exec.go  execpack.go  framebuffer.go  functree.go  graf.go  main.go  record.go  stack.go  statshud.go  text.go  texture.go  timers.go  util.go
